to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,7 @@ body {
     background-attachment: fixed;
     z-index: 0;
     animation: AnimateBG 500s ease infinite;
+    height: 100vh;
   }
 
   @keyframes AnimateBG {
